Side white space fix

--- a/src/apps/IPATranslator/components/Navbar/Navbar.scss
+++ b/src/apps/IPATranslator/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
   height: $navbar-height;
 
   position: fixed;
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
