--- a/src/apps/IPATranslator/pages/LandingPage.scss
+++ b/src/apps/IPATranslator/pages/LandingPage.scss
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   transition: all 0.3s ease-in-out;
+
+  overflow: hidden;
 }
 
 .ipa__landing-page__hero {
@@ -52,7 +54,7 @@
 }
 
 .ipa__landing-page__hero__button-container {
-  margin: 10px;
+  margin-top: 10px;
 
   display: flex;
   align-items: center;
