--- a/src/apps/IPATranslator/pages/TranscriptionPage.scss
+++ b/src/apps/IPATranslator/pages/TranscriptionPage.scss
@@ -8,6 +8,7 @@
 
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   padding-top: 20px + $navbar-height;
   padding-bottom: 20px;
